--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <li><a class="nav-item" href="#work">Work</a></li>
 
-                <li><a class="nav-item" href="Contact.html">Contact me</a></li>
+                <li><a class="nav-item" href="contact.html">Contact me</a></li>
 
                 <li><a class="nav-item" href="./assets/resume.pdf" target="_blank">Resume</a></li>
 
