--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
                 <li><a class="nav-item" href="index.html#work">Work</a></li>
 
-                <li><a class="nav-item" href="Contact.html">Contact me</a></li>
+                <li><a class="nav-item" href="contact.html">Contact me</a></li>
 
                 <li><a class="nav-item" href="./assets/resume.pdf" target="_blank">Resume</a></li>
 
