fix word of asstes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="./Assets/images/p-1.png" class="card-img-top" alt="Screenshot for a project">
+                            <img src="./assets/images/p-1.png" class="card-img-top" alt="Screenshot for a project">
                             <div class="card-body">
                                 <h5 class="card-title">Marta Munchies</h5>
                                 <p class="card-text">This Project is about resturant around marta station, next time for arrival of next line of marta, showing weather of Atlanta.. </p>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="./Assets/images/p-2.png" class="card-img-top" alt="Screenshot for a project">
+                            <img src="./assets/images/p-2.png" class="card-img-top" alt="Screenshot for a project">
                             <div class="card-body">
                                 <h5 class="card-title">Weather Dashboard</h5>
                                 <p class="card-text">View complete climate conditions with our weather dashboard, built for localized data monitoring, analyzed by city or specific regions.</p>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card">
-                            <img src="./Assets/images/p-3.png" class="card-img-top" alt="Screenshot for a project">
+                            <img src="./assets/images/p-3.png" class="card-img-top" alt="Screenshot for a project">
                             <div class="card-body">
                                 <h5 class="card-title">Day Scheduler</h5>
                                 <p class="card-text">A schedule is a plan that gives a list of events or tasks and the times at which each one should happen or be done..</p>
